  of types.
* Changed the "references" property in "commonPropertiesForNamed" to "resources"
  to help minimize confusion with "$ref".
* Fixed some example syntax errors: SENSOR_VALUE and FACTORY_DEFAULTS.
* Changed all example "pid" values marked as '#undefined' to -1. Now they'll all
  at least parse, even if they don't validate.
* Updated all example labels to capitalize all words.
* Updated PACKED_PID_SUB and PACKED_PID_INDEX with notes and constraints.

v24:
* Updated all examples to have "get_subdevice_range" and "set_subdevice_range"
  to illustrate that "default" (at least in spec draft 2019-09) doesn't imply
  that the property exists.
* Changed "hour" in the REAL_TIME_CLOCK example to having a max. of 24 but
  leaving the "second" max. at 60.
* Added E1.37-7 examples. These contain some "$ref" examples.
* Fixed the "required" field in "refType" to contain "$ref" and not "ref".
* Updated the personality to be restricted to 1-255 in: DMX_PERSONALITY,
  DEVICE_INFO, and DMX_PERSONALITY_DESCRIPTION.
* Removed "required" from "rangeType" and updated its description.
* Added sensor type labels to SENSOR_DEFINITION.
* Added "json" to the list in "format" for "stringType".
* Added E1.37-5 examples.

v25:
* Added "maxBytes" to "stringType" for the maximum encoded size in bytes.
* Updated the "format" description in "stringType": added that the formats from
  the JSON Schema Validation spec are valid and added URLs that describe the
  format for each of the format words.
* Since "default" is just informative, and does not exist as a value if the
  associated property does not exist, removed it from "restrictToLabeled" in
  "integerType" and "reserved" in "bitType".
* Added a link for ECMA-262 to the "pattern" description in "stringType".
* Fixed the SET response in CLEAR_STATUS_ID to be empty.
* Added a "restrictToASCII" flag for "stringType".
* Updated examples that need to be restricted to ASCII with the new
  "restrictToASCII" flag.