@@ -1,6 +1,6 @@
 {
   "name": "DNS_HOSTNAME",
-  "notes": "E1.37-2",
+  "notes": "E1.37-2. This the host-specific part (or \"label\") of an internet host; it is prepended to the domain name using a dot ('.') to create a fully qualified domain name (FQDN).",
   "pid": 1804,
   "version": 1,
   "get_request_subdevice_range": [ "root", "subdevices" ],
@@ -9,8 +9,13 @@
     {
       "name": "hostname",
       "type": "string",
-      "resources": [ "https://tools.ietf.org/html/rfc1123#section-2.1" ],
-      "format": "hostname",
+      "resources": [
+        "https://tools.ietf.org/html/rfc1123#section-2.1",
+        "https://tools.ietf.org/html/rfc1912#section-2.1",
+        "https://stackoverflow.com/a/14622263"
+      ],
+      "pattern": "^(?!-)[a-zA-Z0-9-]{0,62}[a-zA-Z0-9]$",
+      "notes": "Some implementations don't support negative lookbehind in patterns.",
       "minLength": 1,
       "maxLength": 63,
       "restrictToASCII": true
