@@ -350,7 +350,7 @@
       "properties": {
         "type": { "const": "string" },
         "format": {
-          "description": "This field describes how to interpret the string value. It can be one of the string types defined in \"Table A-15: Data Type Defines\" of the RDM E1.20 specification (or other add-on specifications), one of the defined formats from the JSON Schema Validation specification (https://json-schema.org/draft/2019-09/json-schema-validation.html#rfc.section.7.3), or it can be something manufacturer-specific. Be aware, however, that anything not defined here may not be understood by a controller or UI. The known string types from E1.20 (and add-ons) include: domain-name (https://tools.ietf.org/html/rfc2181#section-11), hostname (https://tools.ietf.org/html/rfc1123#section-2.1, https://tools.ietf.org/html/rfc5891#section-4.4), json (https://tools.ietf.org/html/rfc7159), string, and url (https://tools.ietf.org/html/rfc3986, https://tools.ietf.org/html/rfc1738).",
+          "description": "This field describes how to interpret the string value. It can be one of the string types defined in \"Table A-15: Data Type Defines\" of the RDM E1.20 specification (or other add-on specifications), one of the defined formats from the JSON Schema Validation specification (https://json-schema.org/draft/2019-09/json-schema-validation.html#rfc.section.7.3), or it can be something manufacturer-specific. Be aware, however, that anything not defined here may not be understood by a controller or UI. The known string types from E1.20 (and add-ons) include: hostname (https://tools.ietf.org/html/rfc1123#section-2.1, https://tools.ietf.org/html/rfc5891#section-4.4), json (https://tools.ietf.org/html/rfc7159), string, and url (https://tools.ietf.org/html/rfc3986, https://tools.ietf.org/html/rfc1738).",
           "type": "string"
         },
         "pattern": {
